--- a/docs/modules/general/nav.adoc
+++ b/docs/modules/general/nav.adoc
@@ -1,4 +1,4 @@
 * xref:general:index.adoc[General]
-* xref:general:concept.adoc[Concept]
+* xref:general:migration.adoc[Migration Guide]
 * External API(s)
 ** xref:onecx-parameter:general:openapi/onecx-parameter-openapi-v1.adoc[Parameter Management V1]
